# time-gpt

./: .env  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: trial.ipynb
notebooks/data/: italy_test.csv  italy_train.csv
